--- a/Listen/listen_2.html
+++ b/Listen/listen_2.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="de">
+
 <head>
     <meta charset="UTF-8">
-  
     <title>Verschaltelte Listen</title>
 </head>
+
 <body>
-    
+    <h1>Verschaltelte Listen</h1>
+    <p>Listen können in HTML verschachtelt werden, zum Beispiel so:</p>
+    <ol>
+        <li>Suchmaschinen im Internet
+            <ul>
+                <li>Google
+                    <ul>
+                        <li>Startseite</li>
+                        <li>Impressum</li>
+                        <li>Datenschutzerklärung</li>
+                    </ul>
+                </li>
+                <li>Bing</li>
+                <li>Yahoo</li>
+            </ul>
+        </li>
+        <li>Nachrichtenseiten
+            <ul>
+                <li>Spiegel Online</li>
+                <li>Focus</li>
+                <li>Süddeutsche Zeitung</li>
+            </ul>
+        </li>
+        <li>Städte im Netz
+            <ul>
+                <li>Berlin</li>
+                <li>München</li>
+                <li>Hamburg</li>
+            </ul>
+        </li>
+
+    </ol>
 </body>
+
 </html>
