Tabellen/ergebnisse.html completed

--- a/Tabellen/ergebnisse.html
+++ b/Tabellen/ergebnisse.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <title>Ergebnisse</title>
     <style>
-        .table{
+        table {
             width: 100%;
         }
 
-        .table,
+        table,
         th,
         tr,
         td {
@@ -46,23 +46,19 @@
             <td>Burger, Hannes</td>
         </tr>
         <tr>
-            <td rowspan="2">2</td>
-            <td rowspan="2" class="penzberg">TSV Penzberg</td>
-            <td rowspan="2">Jäger, Nick</td>
-            <td rowspan="2">Herbeck, Lucas</td>
-            <td rowspan="2">32:54</td>
+            <td>2</td>
+            <td class="penzberg">TSV Penzberg</td>
+            <td>Jäger, Nick</td>
+            <td>Herbeck, Lucas</td>
+            <td>32:54</td>
         </tr>
         <tr>
+            <td>3</td>
+            <td class="penzberg">TSV Penzberg</td>
+            <td>Bauer, Matthias</td>
+            <td>Hahn, Paul</td>
+            <td>34:23</td>
         </tr>
-        <tr>
-            <td rowspan="2">3</td>
-            <td rowspan="2" class="penzberg">TSV Penzberg</td>
-            <td rowspan="2">Bauer, Matthias</td>
-            <td rowspan="2">Hahn, Paul</td>
-            <td rowspan="2">34:23</td>
-        </tr>
-        <tr></tr>
-        <tr></tr>
     </table>
 
 </body>
