Tabellen/index.html completed

--- a/Tabellen/index.html
+++ b/Tabellen/index.html
@@ -28,7 +28,7 @@
             margin-bottom: 5px;
         }
 
-        .double_line {
+        table.double_line {
             border-collapse: separate;
         }
 
@@ -54,6 +54,7 @@
         table#aufgabe6 tr:nth-child(odd) {
             background-color: #EEE;
         }
+
     </style>
 </head>
 
