folder Stundenplan added

--- a/Tabellen/Stundenplan/stundenplan.html
+++ b/Tabellen/Stundenplan/stundenplan.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <title>Stundenplan</title>
     <style>
+        a:link{
+            text-decoration: none;
+        }
         table {
             width: 100%;
             border: 1px solid black;
@@ -28,6 +31,7 @@
 
         .en {
             background-color: lightyellow;
+            
         }
 
         .ws {
@@ -90,7 +94,7 @@
         </tr>
         <tr>
             <td>3.</td>
-            <td class="en" rowspan="2">Eng</td>
+            <td class="en" rowspan="2"><a href="faecher/englisch.html">Eng</a></td>
             <td class="de" rowspan="2">Deu</td>
         </tr>
         <tr>
