Tabellen/Stundenplan/css/styles.css added Stundenplan changed

--- a/Tabellen/Stundenplan/stundenplan.html
+++ b/Tabellen/Stundenplan/stundenplan.html
@@ -4,68 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Stundenplan</title>
-    <style>
-        a:link{
-            text-decoration: none;
-        }
-        table {
-            width: 100%;
-            border: 1px solid black;
-            border-collapse: collapse;
-            text-align: center;
-        }
-
-        th,
-        td {
-            border: 1px solid black;
-            padding: 17px;
-        }
-
-        thead {
-            background-color: lightgray;
-        }
-
-        .pr {
-            background-color: lightblue;
-        }
-
-        .en {
-            background-color: lightyellow;
-            
-        }
-
-        .ws {
-            background-color: green;
-        }
-
-        .ma {
-            background-color: lightpink;
-        }
-
-        .ti {
-            background-color: lightgreen;
-        }
-
-        .de {
-            background-color: lightcyan;
-        }
-
-        .ba {
-            background-color: orange;
-        }
-
-        .kn {
-            background-color: lightseagreen;
-        }
-
-        .ia {
-            background-color: burlywood;
-        }
-
-        .db {
-            background-color: rosybrown;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -99,7 +38,7 @@
         </tr>
         <tr>
             <td>4.</td>
-            <td class="pr" rowspan="3">Prog</td>
+            <td class="pr" rowspan="3"><a href="faecher/programmieren.html" target="_blanked">Prog</td>
             <td class="ti" rowspan="2">T-Inf</td>
         </tr>
         <tr>
