tinf added and picture of Kohnle added

--- a/Tabellen/Stundenplan/stundenplan.html
+++ b/Tabellen/Stundenplan/stundenplan.html
@@ -39,7 +39,7 @@
         <tr>
             <td>4.</td>
             <td class="pr" rowspan="3"><a href="faecher/programmieren.html" target="_blanked">Prog</td>
-            <td class="ti" rowspan="2">T-Inf</td>
+            <td class="ti" rowspan="2"><a href="faecher/tinf.html">T-INF</a></td>
         </tr>
         <tr>
             <td>5.</td>
