IFrame Kohnehome.de

--- a/Tabellen/Stundenplan/faecher/tinf.html
+++ b/Tabellen/Stundenplan/faecher/tinf.html
@@ -27,6 +27,9 @@
       <area shape="circle" coords="164,193,20" href="http://www.kohnlehome.de" alt="kohnle">
     </map> 
     <p><a href="../stundenplan.html" target="_blanked">Zurück</a></p>
+    <p>
+        <iframe src="http://www.kohnlehome.de" height="470px" width="70%" style="border: none;"</iframe>
+    </p>
 </body>
 
 </html>
