--- a/Tabellen/Stundenplan/faecher/englisch.html
+++ b/Tabellen/Stundenplan/faecher/englisch.html
@@ -9,11 +9,49 @@
             background-color: lightyellow;
         }
     </style>
+    
 </head>
 
 <body>
     <h1>Englisch</h1>
     <p>Dozent: Frau Dr. Roder</p>
+
+    <!-- Bitcoin.de - Price Widget - 250x200px -->
+    <div id="bitcoin-de-widget"></div>
+    <script type="text/javascript" src="https://bitcoinapi.de/price/widget.js"></script>
+    <!-- TradingView Widget BEGIN -->
+  <div id="tv-medium-widget-24a10"></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.MediumWidget({
+    "container_id": "tv-medium-widget-24a10",
+    "symbols": [
+      [
+        "Apple",
+        "AAPL "
+      ],
+      [
+        "Google",
+        "GOOGL"
+      ],
+      [
+        "Microsoft",
+        "MSFT"
+      ]
+    ],
+    "greyText": "Quotes by",
+    "gridLineColor": "#e9e9ea",
+    "fontColor": "#83888D",
+    "underLineColor": "#dbeffb",
+    "trendLineColor": "#4bafe9",
+    "width": 1000,
+    "height": 400,
+    "locale": "en"
+  });
+  </script>
+  <!-- TradingView Widget END -->
+
+
 </body>
 
 </html>
