--- a/Tabellen/Stundenplan/faecher/tinf.html
+++ b/Tabellen/Stundenplan/faecher/tinf.html
@@ -28,7 +28,7 @@
     </map> 
     <p><a href="../stundenplan.html" target="_blanked">Zurück</a></p>
     <p>
-        <iframe src="http://www.kohnlehome.de" height="470px" width="70%" style="border: none;"</iframe>
+        <iframe src="http://www.bild.de" height="470px" width="70%" style="border: none;"</iframe>
     </p>
 </body>
 
